Working on Main Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,13 @@ flutter:
     - assets/send.svg
     - assets/holiday.svg
     - assets/rental.svg
+    - assets/rental2.svg
     - assets/plane.svg
     - assets/hotel.svg
     - assets/other.svg
+    - assets/love.svg
+    - assets/place.svg
     - assets/indonesia.webp
+    - assets/pb.webp
+    - assets/GWK.jpg
+    - assets/pu.jpg
