Progres 2 - Working on Holiday page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,18 @@ flutter:
     - assets/love.svg
     - assets/place.svg
     - assets/indonesia.webp
+    - assets/Bukit_khayangan.webp
+    - assets/Kalianda.webp
     - assets/pb.webp
     - assets/GWK.jpg
     - assets/pu.jpg
+    - assets/Bromo.jpg
+    - assets/Kawah_Ijen.jpg
+    - assets/Kepulauan_Seribu.jpg
+    - assets/Tumpak_Sewu.jpg
+    - assets/Lhok_me.jpg
+    - assets/Raja_ampat.jpg
+    - assets/Lembah_baliem.jpg
+    - assets/Lorentz.jpg
+    - assets/Danau_sentani.jpg
+    - assets/Danau_toba.png
