--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,11 @@ dependencies:
   google_fonts: ^6.2.1
 
   cupertino_icons: ^1.0.8
+  flutter_native_splash: ^2.4.3
+  dio: ^5.7.0
+  provider: ^6.1.2
+  dartz: ^0.10.1
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -28,6 +33,7 @@ flutter:
   uses-material-design: true
 
   assets:
+    - assets/images/
     - assets/location.svg
     - assets/notification.svg
     - assets/send.svg
@@ -39,6 +45,7 @@ flutter:
     - assets/other.svg
     - assets/love.svg
     - assets/place.svg
+    - assets/search.svg
     - assets/indonesia.webp
     - assets/Bukit_khayangan.webp
     - assets/Kalianda.webp
