--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   provider: ^6.1.2
   dartz: ^0.10.1
   carousel_slider: ^5.0.0
+  infinite_scroll_pagination: ^4.1.0
 
 dev_dependencies:
   flutter_test:
