--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   dartz: ^0.10.1
   carousel_slider: ^5.0.0
   infinite_scroll_pagination: ^4.1.0
+  get_it: ^8.0.2
 
 dev_dependencies:
   flutter_test:
