--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   carousel_slider: ^5.0.0
   infinite_scroll_pagination: ^4.1.0
   get_it: ^8.0.2
+  webview_flutter: ^3.0.4
+  webview_windows: ^0.2.0
 
 dev_dependencies:
   flutter_test:
